--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "prom-client": "^15.1.0",
     "web-vitals": "^4.2.4",
-    "archiver": "^7.0.1"
+    "archiver": "^7.0.1",
+    "node-fetch": "^2.6.7",
+    "@types/node-fetch": "^2.6.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.0",
