--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
+    "@smithy/node-http-handler": "^4.1.1",
+    "archiver": "^7.0.1",
     "prom-client": "^15.1.0",
-    "web-vitals": "^4.2.4",
-    "archiver": "^7.0.1"
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.0",
