--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -28,6 +28,14 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: ${{ secrets.AWS_REGION }}
   S3_BUCKET: ${{ secrets.S3_BUCKET }}
+  S3_ENDPOINT: ${{ secrets.S3_ENDPOINT }}
+  S3_FORCE_PATH_STYLE: ${{ secrets.S3_FORCE_PATH_STYLE }}
+  S3_TLS_VERIFY: ${{ secrets.S3_TLS_VERIFY }}
+  MINIO_ACCESS_KEY: ${{ secrets.MINIO_ACCESS_KEY }}
+  MINIO_SECRET_KEY: ${{ secrets.MINIO_SECRET_KEY }}
+  MINIO_ROOT_USER: ${{ secrets.MINIO_ROOT_USER }}
+  MINIO_ROOT_PASSWORD: ${{ secrets.MINIO_ROOT_PASSWORD }}
+  MINIO_ENDPOINT: ${{ secrets.MINIO_ENDPOINT }}
   PROMETHEUS_PUSHGATEWAY: ${{ secrets.PROMETHEUS_PUSHGATEWAY }}
   TEST_URL: ${{ inputs.test_url || secrets.TEST_URL }}
 
@@ -48,6 +56,14 @@ jobs:
           aws_secret_access_key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws_region: ${{ env.AWS_REGION }}
           s3_bucket: ${{ env.S3_BUCKET }}
+          s3_endpoint: ${{ env.S3_ENDPOINT || env.MINIO_ENDPOINT }}
+          s3_force_path_style: ${{ env.S3_FORCE_PATH_STYLE || 'true' }}
+          s3_tls_verify: ${{ env.S3_TLS_VERIFY || 'false' }}
+          minio_access_key: ${{ env.MINIO_ACCESS_KEY }}
+          minio_secret_key: ${{ env.MINIO_SECRET_KEY }}
+          minio_root_user: ${{ env.MINIO_ROOT_USER }}
+          minio_root_password: ${{ env.MINIO_ROOT_PASSWORD }}
+          minio_endpoint: ${{ env.MINIO_ENDPOINT }}
           prometheus_pushgateway: ${{ env.PROMETHEUS_PUSHGATEWAY }}
           browser: ${{ inputs.browser || 'chromium' }}
           env_vars: ${{ inputs.env_vars }}
