--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run Synthetic Monitoring
-        uses: ./.github/actions/synthetic-monitoring
+        uses: ./
         with:
           test_url: ${{ env.TEST_URL }}
           aws_access_key_id: ${{ env.AWS_ACCESS_KEY_ID }}
