Update .env and .env.example to include optional MinIO configuration and examples for S3-compatible services

--- a/.env
+++ b/.env
@@ -13,3 +13,20 @@ S3_BUCKET=test-bucket
 
 PROMETHEUS_PUSHGATEWAY=http://localhost:9091
 TEST_URL=http://example.com
+
+# Optional MinIO / S3-compatible configuration
+# Uncomment and set these if you are using MinIO or another S3-compatible service
+# MINIO_ENDPOINT=https://minio.example.com
+# MINIO_ACCESS_KEY=minioaccess
+# MINIO_SECRET_KEY=miniosecret
+# MINIO_ROOT_USER=minioroot
+# MINIO_ROOT_PASSWORD=miniorootpassword
+#
+# If using a non-AWS S3 compatible endpoint, set S3_ENDPOINT instead of MINIO_ENDPOINT
+# S3_ENDPOINT=https://s3-compatible.example.com
+# S3_FORCE_PATH_STYLE=true   # Usually true for MinIO
+# S3_TLS_VERIFY=false       # Set to false if using self-signed certs
+
+# Example: Prometheus-only configuration (no S3 export)
+# PROMETHEUS_PUSHGATEWAY=https://prometheus.example.com:9091
+# TEST_URL=https://myapp.example.com
