--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,12 @@ S3_BUCKET=your_bucket_name
 # S3_FORCE_PATH_STYLE=true
 # S3_TLS_VERIFY=true
 
+# MinIO specific examples (alternative to AWS credentials)
+# MINIO_ENDPOINT=https://minio.example.com
+# MINIO_ACCESS_KEY=minioaccess
+# MINIO_SECRET_KEY=miniosecret
+# MINIO_ROOT_USER=minioroot
+# MINIO_ROOT_PASSWORD=miniorootpassword
+
 PROMETHEUS_PUSHGATEWAY=http://your-pushgateway:9091
 TEST_URL=https://your-target-site.com
