--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "@smithy/node-http-handler": "^4.1.1",
     "archiver": "^7.0.1",
     "prom-client": "^15.1.0",
-    "web-vitals": "^4.2.4",
-    "lighthouse": "^12.8.1",
-    "chrome-launcher": "^1.2.0"
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.0",
