Fix Playwright Docker image and Chrome path issues for Lighthouse
- Update to mcr.microsoft.com/playwright:v1.51.0-jammy (valid image)
- Fix apt-key deprecation warning with new gpg method
- Force installation of full chromium browser instead of headless shell
- Improve Chrome path detection for Lighthouse
- Update Playwright config to use full chromium browser

--- a/.github/workflows/synthetic-monitoring.yml
+++ b/.github/workflows/synthetic-monitoring.yml
@@ -43,7 +43,7 @@ jobs:
   synthetic-tests:
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/playwright:v1.51.0-focal
+      image: mcr.microsoft.com/playwright:v1.51.0-jammy
     
     steps:
       - uses: actions/checkout@v4
