--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@smithy/node-http-handler": "^4.1.1",
     "archiver": "^7.0.1",
-    "prom-client": "^15.1.0",
-    "web-vitals": "^4.2.4",
+    "chrome-launcher": "^1.2.0",
     "lighthouse": "^12.8.1",
-    "chrome-launcher": "^1.2.0"
+    "prom-client": "^15.1.0",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.0",
