fix: correct Playwright installation command by removing unnecessary input variable

--- a/action.yml
+++ b/action.yml
@@ -98,7 +98,8 @@ runs:
 
     - name: Install Playwright
       shell: bash
-      run: npx playwright install --with-deps ${{ inputs.browser }}
+      # run: npx playwright install --with-deps ${{ inputs.browser }}
+      run: npx playwright install --with-deps
 
     - name: Setup environment
       shell: bash
